Sample_Java/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-deployment
  template:
    metadata:
      labels:
        app: java-deployment
    spec:
      containers:
      - name: java-deployment
        image: demoacr1212.azurecr.io/javaapp
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
         requests:
            memory: "200Mi"
            cpu: "150m"
         limits:
            memory: "500Mi"
            cpu: "250m"
      restartPolicy: Always
