Sample_Java/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-svc
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: java-deployment
