Sample_Java/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-javaingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-svc
            port:
              number: 8080
      - path: /sample
        pathType: Prefix
        backend:
          service:
            name: java-svc
            port:
              number: 8080
